<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:background="@color/colorThree">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ad-Soyad: "
            android:padding="1dp"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/fullNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fake_full_name"
            android:textColor="@color/background"
            android:textSize="20sp"
            android:textStyle="italic"
            android:padding="1dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tel: "
            android:padding="1dp"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/phoneNumberTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fake_phone_number"
            android:textColor="@color/background"
            android:textSize="20sp"
            android:textStyle="italic"
            android:padding="1dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Adress: "
            android:padding="1dp"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/addressTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fake_address"
            android:textColor="@color/background"
            android:textSize="20sp"
            android:textStyle="italic"
            android:padding="1dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Group: "
            android:padding="1dp"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/groupTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fake_group"
            android:textColor="@color/background"
            android:textSize="20sp"
            android:textStyle="italic"
            android:padding="1dp" />

    </LinearLayout>

    <Button
        android:id="@+id/deletePersonButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sil"
        android:layout_marginTop="100dp"/>
</LinearLayout>